cluster/apps/photography/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lychee
  namespace: photography
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/appName: "lychee"
    hajimari.io/enable: "true"
    hajimari.io/icon: "cow"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "lychee.${SECRET_DOMAIN}"
      secretName: "lychee-tls"
  rules:
    - host: "lychee.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lychee
                port:
                  number: 80
